Adds support for more SelectBody types in JSqlParserQueryEhancer.
We now support `ValuesStatement` and `SetOperationList`. This allows native queries to use `union`, `except`, and `with` statements in native SQL queries.

Closes #2578.